[project]
name = "mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gnews>=0.4.0",
    "mcp[cli]>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "tavily-python>=0.5.1",
    "wikipedia>=1.4.0",
]
